@@ -1,4 +1,9 @@
 
+Slick 7.x-3.0-dev, 2019-03-06
+-----------------------------
+- Updated to the latest Blazy change 03-06 with BlazyAdminBase::openingForm().
+- Added hook_slick_build_alter() to modify the entire slick outputs.
+
 Slick 7.x-3.0-dev, 2019-03-02
 -----------------------------
 - Added proper check for captions for edge case settings hold old references
